using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;


internal class animationstrings
{
    // Inimigos / Universal
    internal static string IsGrouded = "IsGrouded";
    internal static string IsOnWall = "IsOnWall";
    internal static string IsOnCeiling = "IsOnCeiling";
    internal static string Target = "Target";
    internal static string canMove = "canMove";
    internal static string IsAlive = "IsAlive";
    internal static string hit = "hit";
    internal static string VelocityLock = "VelocityLock";

    //Dialogos
    internal static string isDialog = "isDialog";
    internal static string IsDialogFinish = "IsDialogFinish";

    //Patrulha
    internal static string IsIdlePatrulha = "IsIdlePatrulha";
    internal static string ContagemHit = "ContagemHit";

    //Droggo
    internal static string Combate = "Combate";
    internal static string Ranged = "Ranged";
    internal static string Dash = "Dash";
    internal static string Acordou = "Acordou";
    internal static string Boss_Fight = "Boss_Fight";
    internal static string attackCooldown = "attackCooldown";
    internal static string attackCooldownRanged = "attackCooldownRanged";
    internal static string attackCooldownDash = "attackCooldownDash";

    //Lagartin
    internal static string DireitaLagartin = "DireitaLagartin";
    internal static string Comeco = "Comeco";

    // Player
    internal static string IsHealing = "IsHealing";
    internal static string IsAcordada = "IsAcordada";
    internal static string IsMoving = "IsMoving";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string attack = "attack";
    internal static string Parry = "Parry";
    internal static string IsWallSliding = "IsWallSliding";
    internal static string Powers = "Powers";
    internal static string PowersBraco = "PowersBraco";
    internal static string Impacto = "Impacto";
    internal static string counterAtt = "counterAtt";

    //Tiles
    internal static string Ativador_Ativo = "Ativador_Ativo";
    internal static string Fim_TimeTile = "Fim_TimeTile";

}